# ray-tracer

./: .deepsource.toml  .gitignore  CLAUDE.md  README.md  TODO.txt  pyproject.toml  use_cannon.py
.github/workflows/: analyze.yml
e2e/: scratchpad.py
scripts/: clock.py  draw_sphere.py  llvm.py  render_gallery.py  scratchpad.py
src/: test.py  use_cannon.py
src/cannon/: __init__.py  environment.py  projectile.py  tick.py
src/ray_tracer/: __init__.py  constants.py  custom_tuple.py  point.py  utils.py
src/ray_tracer/canvas/: __init__.py  canvas.py  utils.py
src/ray_tracer/intersection/: __init__.py  intersection.py
src/ray_tracer/lights/: README.md  __init__.py  lighting.py  point.py
src/ray_tracer/material/: material.py
src/ray_tracer/matrix/: __init__.py  matrix.py  transforms.py
src/ray_tracer/ray/: __init__.py  ray.py
src/ray_tracer/rt_tuple/: __init__.py  color_tuple.py  constants.py  custom_tuple.py
src/ray_tracer/sphere/: __init__.py  sphere.py
src/ray_tracer/tuples/: __init__.py  color_tuple.py  custom_tuple.py  utils.py
src/ray_tracer/world/: __init__.py  world.py
tests/: test_canvas.py  test_color.py  test_hit.py  test_intersection.py  test_lighting.py  test_lights.py  test_material.py  test_matrix.py  test_ray.py  test_ray_transforms.py  test_sphere.py  test_sphere_normal_at.py  test_sphere_transforms.py  test_transforms.py  test_tuple.py  test_tuple_reflect.py  utils_test.py
