[project]
name = "ray-tracer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Taimur Ibrahim", email = "tai.him18@gmail.com"},
]
dependencies = ["numpy>=2.1.3", "asyncio>=3.4.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
