[project]
name = "ray-tracer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Taimur Ibrahim", email = "tai.him18@gmail.com"},
]
dependencies = ["numpy>=2.1.3", "asyncio>=3.4.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
mypy = "mypy ."

[dependency-groups]
development = [
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
lint.select = [
    "ALL",
]
lint.ignore = [
    "ANN401", # dynamically typed ANY
    "D100", # # pydocstyle - missing docstring in public module
    "D104", # pydocstyle - missing docstring in public package
    "D107", # pydocstyle - missing docstring in __init__
    "D205", # pydocstyle - 1 blank line required between summary line and description
    "E501", # pycodestyle line too long, handled by ruff format
    "EM", # Exception messages,
    "FIX", # we allow todo and fixme comments
    "PLR2004", # Magic variables, we allow them
    "TD", # we allow todo and fixme comments
    "TRY", # Try except block, rules are too strict
    "COM812", # Conflicts with formatter
    "ISC001", # Conflicts with formatter
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src", "functions", "e2e", "db", "tests", "openapi"]

[tool.ruff.lint.pylint]
max-args = 10
max-returns = 10

[tool.mypy]
packages = ["src"]
python_version = "3.11"
disable_error_code = 'import-untyped'
implicit_reexport = false
show_error_codes = true
strict = true
